--- a/resource/app/style.css
+++ b/resource/app/style.css
@@ -49,7 +49,7 @@ textarea#longTextInput:focus {
     margin-top: 0.5em;
     margin-bottom: 15px;
     scroll-padding-bottom: 15px;
-    min-height: 0;
+    /* min-height: 0; */
     /* height: calc(100vh - 100px); */
 }
 
@@ -61,7 +61,7 @@ textarea#longTextInput:focus {
   margin-bottom: 15px !important;
   border: 1px solid rgba(0, 0, 0, 0.1); /* Add weak border */
   transition: all 0.3s;
-  min-height: 0;
+  /* min-height: 0; */
 }
 
 .list-item .card-id {
