--- a/resource/app/style.css
+++ b/resource/app/style.css
@@ -57,7 +57,7 @@ body {
   @apply h-10 px-4 bg-slate-200 ml-8;
 }
 
-#cardsList .selected, #suggestionResults .highlighted {
+#cardsList .selected, #suggestionResults .highlighted, .completeAtMenu .highlighted{
   @apply bg-slate-300;
 }
 
@@ -86,6 +86,7 @@ body {
 }
 
 .custom-menu {
+    position: absolute;
     border: 1px solid #ccc;
     background-color: #f9f9f9;
     z-index: 1000;
