support fuzzy search in tag complete

--- a/resource/app/style.css
+++ b/resource/app/style.css
@@ -92,3 +92,9 @@ body {
     z-index: 1000;
     /* ... additional styles ... */
 }
+
+
+.cm-hashtag {
+  color: blue;
+  text-decoration: underline;
+}
