--- a/resource/app/style.css
+++ b/resource/app/style.css
@@ -98,9 +98,16 @@ body {
     @apply bg-slate-300;
 }
 
+#cardsList{
+   background-color: #F5F6F8;
+}
+
 #cardsList li {
     @apply mx-2 my-1 px-4 py-2 rounded;
+    margin-bottom: 10px;
+    border: 1px,#CBE2FE;
 }
+
 
 #cardContainer {
     @apply pt-12;
