--- a/resource/app/style.css
+++ b/resource/app/style.css
@@ -105,7 +105,7 @@ body {
 #cardsList li {
     @apply mx-2 my-1 px-4 py-2 rounded;
     margin-bottom: 10px;
-    border: 1px,#CBE2FE;
+    padding: 0%;
 }
 
 
