--- a/resource/app/codemirror/codemirror.css
+++ b/resource/app/codemirror/codemirror.css
@@ -183,7 +183,7 @@ div.CodeMirror span.CodeMirror-nonmatchingbracket {color: #a22;}
 .CodeMirror-vscrollbar {
   right: 0; top: 0;
   overflow-x: hidden;
-  overflow-y: scroll;
+  overflow-y: hidden;
 }
 .CodeMirror-hscrollbar {
   bottom: 0; left: 0;
