--- a/resource/app/style.css
+++ b/resource/app/style.css
@@ -616,10 +616,6 @@ a.hidden{
 
 
 .CodeMirror {
-  height: auto;
-}
-
-.CodeMirror-scroll {
-  overflow-y: hidden;
-  overflow-x: auto;
+    height: auto;
+    min-height: 200px;
 }
