search, tag, card reference autosuggestion pannel sytle

--- a/resource/app/codemirror/show-hint.css
+++ b/resource/app/codemirror/show-hint.css
@@ -1,40 +1,32 @@
 .CodeMirror-hints {
-  position: absolute;
-  z-index: 10;
-  overflow: hidden;
-  list-style: none;
-
-  margin: 0;
-  padding: 2px;
-
-  -webkit-box-shadow: 2px 3px 5px rgba(0,0,0,.2);
-  -moz-box-shadow: 2px 3px 5px rgba(0,0,0,.2);
-  box-shadow: 2px 3px 5px rgba(0,0,0,.2);
-  border-radius: 3px;
-  border: 1px solid silver;
-
-  background: white;
-  font-size: 90%;
-  font-family: monospace;
-
-  max-height: 20em;
-  overflow-y: auto;
+    position: absolute;
+    z-index: 10;
+    list-style: none;
+    overflow-x: hidden;
+    overflow-y: auto;
+    background: #FFFFFF;
+    max-height: 10rem;
+    min-width: 12.4rem;
+    font-size: 0.86666667rem;
+    border-radius: 0.53333rem;
+    background: #ECE7E3;
+    border: 0.5px solid #BABABA;
+    box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0.10), 0px 5px 20px 0px rgba(0, 0, 0, 0.25);
+    padding: 0.4rem;
 }
 
 .CodeMirror-hint {
     display: block;
-    border-bottom: solid var(--borderColor-muted, var(--color-border-muted));
-    font-weight: var(--base-text-weight-medium, 500);
-    margin: 0;
-    padding: 0 4px;
-    border-radius: 2px;
+    overflow-x: hidden;
+    line-height: 1.33333333rem;
     white-space: pre;
-    color: black;
+    color: #121417;
     cursor: pointer;
-
+    border-radius: 0.26666667rem;
+    padding: 0.13333333rem 0.53333333rem;
 }
 
 li.CodeMirror-hint-active {
-  background: #08f;
-  color: white;
+    background: #66A1F9;
+    color: #FFFFFF;
 }
