added back style changes

--- a/packages/renderer/assets/codemirror/github-markdown-light.css
+++ b/packages/renderer/assets/codemirror/github-markdown-light.css
@@ -1007,3 +1007,37 @@
 .markdown-body ::-webkit-calendar-picker-indicator {
     filter: invert(50%);
 }
+
+/* Custom css styles for the markdown body */
+.markdown-body {
+    color: #121417;
+}
+.markdown-body a.cm-hashtag { 
+    display: inline-block;
+    font-size: 13px;
+    color: #2569D3;
+    background-color: #EFF5FC;
+    border: 1px solid #6A9EE1;
+    border-radius: 0.26666667rem;
+    padding-top: 0.15rem;
+    padding-bottom: 0.15rem;
+    padding-left: 0.53333333rem;
+    padding-right: 0.53333333rem;
+}
+
+.markdown-body a.cm-hashtag:hover {
+    text-decoration: none;
+    color: #FFFFFF;
+    background-color: #2569D3;
+    border: 1px solid transparent;
+}
+
+.markdown-body a.cm-linkref {
+    color: #2569D3;
+    text-decoration: none;
+}
+
+.markdown-body a.cm-linkref:hover {
+    border-bottom: 1px solid #2569D3;
+}
+
