--- a/packages/renderer/src/register.css
+++ b/packages/renderer/src/register.css
@@ -1,44 +1,51 @@
-body {
-    font-family: Arial, sans-serif;
+@charset "UTF-8";
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+.title-bar {
     display: flex;
-    height: 100vh;
-    justify-content: center;
     align-items: center;
-    background-color: #f6f6f6;
+    padding: 8px 10px;
+    background: #f5f5f5;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
 }
 
-.container {
-    padding: 30px;
-    border-radius: 8px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-    background-color: #ffffff;
-    width: 350px;
-    text-align: center;
+.title-bar .buttons {
+    display: flex;
+    margin-right: 15px;
 }
 
-h1 {
-    margin-bottom: 20px;
+.content {
+    padding: 15px;
 }
 
-label {
-    display: block;
-    margin-bottom: 10px;
+.content p {
+    margin-bottom: 15px;
 }
 
-input {
+.content a {
+    color: #007BFF;
+    text-decoration: none;
+}
+
+.content input {
     width: 100%;
     padding: 10px;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
     border: 1px solid #ccc;
     border-radius: 4px;
 }
 
 button {
-    padding: 10px 20px;
+    display: block;
+    width: 100%;
+    padding: 10px;
     background-color: #007BFF;
+    color: #fff;
     border: none;
     border-radius: 4px;
-    color: #ffffff;
     cursor: pointer;
 }
 
