trial function change

--- a/packages/renderer/src/style.css
+++ b/packages/renderer/src/style.css
@@ -300,6 +300,10 @@ body {
     @apply hidden;
 }
 
+#listArea[data-readonly="true"] #newItem {
+    background-color: #EBEBEB;
+}
+
 #newItem {
     background-color: #FFFFFF;
     box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.05);
