commit new project organization

--- a/src/renderer/css/style.css
+++ b/src/renderer/css/style.css
@@ -1,8 +1,6 @@
 @charset "UTF-8";
 @import "/codemirror/github-markdown-light.css";
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import "./base.css";
 
 #splashScreen {
     position: fixed;
