--- a/src/renderer/css/register.css
+++ b/src/renderer/css/register.css
@@ -1,7 +1,4 @@
-@charset "UTF-8";
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import "./base.css";
 
 .title-bar {
     display: flex;
